Fixing images sizes on tablet devices

--- a/css/main.css
+++ b/css/main.css
@@ -2640,19 +2640,27 @@ div.key-learnings .concl-sub {
     margin-bottom: -3rem;
   }
 
-  footer#footer-cube {
-    margin: 0 auto;
+  footer#footer-cube{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    background-color: #FB7E6C;
+    margin: 0;
+    height: 15rem;
   }
 
   ul.social-media {
     align-items: center;
     justify-content: center;
     width: 100%;
-    padding: 2rem 0;
+    margin: -0.5rem auto 0 auto;
+    padding: 0;
   }
 
   ul.social-media li {
-    margin: 0 auto;
+    margin: -8rem auto -3rem auto;
     display: flex;
     flex-wrap: wrap;
   }
@@ -2678,17 +2686,32 @@ div.key-learnings .concl-sub {
     color: #001F40;
   }
 
-  section#contact div.copyright p {
+  footer#footer-cube div.copyright p {
     text-align: center;
     align-items: center;
     border: none;
-    font-size: 1.8rem;
-    margin: 0 auto;
-    padding: 0 0 1rem 0;
+    font-size: 1.6rem;
+    margin: -2rem auto 0 auto;
+    padding: 2rem 0 2rem 0;
     width: 100%;
     display: block;
     font-family: "Brandon Text Medium";
   }
+
+@media and (min-width: 320px) {
+
+  footer#footer-cube div.copyright p {
+    text-align: center;
+    align-items: center;
+    border: none;
+    font-size: 1.8rem;
+    margin: -2rem auto 3rem auto;
+    padding: 0 0 3rem 0;
+    width: 100%;
+    display: block;
+    font-family: "Brandon Text Medium";
+  }
+}
 
 @media screen and (min-width: 360px) {
   #main-nav {
@@ -2699,6 +2722,18 @@ div.key-learnings .concl-sub {
 @media screen and (min-width: 375px) {
   #main-nav {
     margin: -10rem 0 0 52rem;
+  }
+
+  footer#footer-cube div.copyright p {
+    text-align: center;
+    align-items: center;
+    border: none;
+    font-size: 1.6rem;
+    margin: 0rem auto;
+    padding: 0;
+    width: 100%;
+    display: block;
+    font-family: "Brandon Text Medium";
   }
 
   section#chapter1 img.chapter1-mobile {
@@ -2744,6 +2779,17 @@ div.key-learnings .concl-sub {
 @media screen and (min-width: 480px) {
   #main-nav {
     margin: -10rem 0 0 41.7rem;
+  }
+
+  footer#footer-cube div.copyright p {
+    margin: 0rem auto -1rem auto;
+    padding: 0;
+  }
+
+  ul.social-media li {
+    margin: -10rem auto -3rem auto;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   div.mobile-images-final {
